Fix navbar items from wrapping

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -31,6 +31,10 @@ a code {
   color: inherit;
 }
 
+.navbar .navbar__items {
+  flex: 1 1 auto;
+}
+
 .footer__logo {
   width: 50px;
   height: 50px;
